--- a/css/main.css
+++ b/css/main.css
@@ -326,7 +326,7 @@ nav .nav-item .nav-link {
   padding-top: 50px;
   padding-bottom: 200px;
   font-size: 22px;
-  color: #c2c2c2;
+  color: #f1f0f0;
   list-style: none;
   padding-left: 0px;
   line-height: 35px;
