--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,7 +6,7 @@ $white: #fff;
 $red: #f44336;
 $text-field: #455a64;
 $text-field-light: #455a64;
-$grey: #c2c2c2;
+$grey: #f1f0f0;
 $yellow: #ffc108;
 $turquoise: #009688;
 $turquoise-half-transparent: rgba(0, 150, 136, 0.5);
