prefinal grammar nazi

--- a/css/main.css
+++ b/css/main.css
@@ -775,6 +775,7 @@ footer .copy {
   background-color: #009688;
   color: white;
   font-size: 22px;
+  font-weight: bold;
   margin-bottom: 100px;
 }
 
