--- a/scss/modal/_modal.scss
+++ b/scss/modal/_modal.scss
@@ -93,6 +93,7 @@
                 background-color: $turquoise;
                 color: white;
                 font-size: 22px; 
+                font-weight: bold;
                 margin-bottom: 100px;
             }
         }
