--- a/scss/site/_functions.scss
+++ b/scss/site/_functions.scss
@@ -56,7 +56,7 @@
                 .preparing {
                     color: $red;
                     font-size: 18px;
-                    align-self: center;
+                    margin-top: 15px;
                 }
             }
 
