--- a/scss/_sm_xs_devices.scss
+++ b/scss/_sm_xs_devices.scss
@@ -249,5 +249,17 @@
         }
     }
 
+    .buy-product-modal {
+        width: unset;
+
+        .card {
+            margin-left: 0 !important;
+        }
+
+        .payment-block {
+            margin-bottom: 25px;
+        }
+    }
+
 }
 
