--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,659 @@
   height: 60px;
 }
 
+body, p {
+  font-family: "Roboto", sans-serif !important;
+  counter-reset: section;
+}
+
+h1, .heading, .list-heading, .effit, .price-text, .with-dph {
+  font-family: "Roboto", sans-serif !important;
+  font-weight: bold !important;
+}
+
+.mdl-button--raised {
+  border-radius: 3px !important;
+}
+
+.green {
+  color: #4caf50;
+}
+
+.blue {
+  color: #3f51b5;
+}
+
+.purple {
+  color: #4a148c;
+}
+
+.red {
+  color: #f44336;
+}
+
+nav {
+  height: 70px;
+  padding-bottom: 0px !important;
+  padding-top: 0px !important;
+  -webkit-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.25);
+}
+
+nav .navbar-brand {
+  margin-right: 100px;
+}
+
+nav a {
+  text-decoration: none !important;
+}
+
+nav .navbar-nav .mdl-button--red {
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+
+nav .active {
+  border-bottom: 3px solid #f44336;
+}
+
+nav .nav-item {
+  margin-top: 20px;
+  margin-right: 50px;
+}
+
+nav .nav-item .nav-link {
+  color: #455a64 !important;
+  padding-bottom: 15px;
+  font-size: 18px;
+  font-weight: bold;
+  font-family: "Roboto", sans-serif !important;
+  font-weight: bold !important;
+}
+
+.hero {
+  height: 980px;
+  background: url("../assets/img/hero.jpg");
+  background-size: cover;
+  text-align: center;
+  color: white;
+}
+
+.hero h1 {
+  padding-top: 230px;
+  margin-bottom: 55px;
+  font-weight: bold;
+}
+
+.hero p {
+  font-size: 18px;
+  margin-bottom: 55px;
+}
+
+.hero .mdl-button--red {
+  width: 300px;
+  height: 55px;
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 55px;
+}
+
+.hero .mdl-button--transparent {
+  color: #fff;
+  background-color: transparent;
+  border: 1px solid #fff;
+  padding-left: 56px;
+  padding-right: 56px;
+  height: 40px;
+  font-weight: bold;
+  margin-bottom: 110px;
+}
+
+.hero .circles {
+  max-width: 600px;
+  display: block;
+  margin: 0 auto;
+}
+
+.hero .circles .circle {
+  display: block;
+  margin: 0 auto;
+  font-size: 16px;
+  height: 105px;
+  width: 105px;
+  text-align: center;
+  line-height: 0px;
+  border-radius: 50%;
+  font-weight: bold;
+  border: 2px solid rgba(255, 255, 255, 0.3);
+}
+
+.hero .circles .circle .text {
+  line-height: 70px;
+}
+
+.hero .circles .c1:before {
+  font-family: "Material Icons";
+  content: "free_breakfast";
+  font-size: 30px;
+  line-height: 0;
+}
+
+.hero .circles .c2:before {
+  font-family: "Material Icons";
+  content: "remove_red_eye";
+  font-size: 30px;
+  line-height: 0;
+}
+
+.hero .circles .c3:before {
+  font-family: "Material Icons";
+  content: "verified_user";
+  font-size: 30px;
+  line-height: 0;
+}
+
+.hero .button-scroll {
+  width: 60px;
+  height: 60px;
+  left: calc(50% -  25px);
+  position: absolute;
+  z-index: 999;
+  top: 970px;
+  background: #fff;
+  color: #f44336;
+}
+
+.hero .button-scroll:hover, .hero .button-scroll:focus, .hero .button-scroll:active {
+  background-color: #f44336 !important;
+  color: #fff;
+}
+
+.products {
+  padding-top: 140px;
+}
+
+.products .heading {
+  text-align: center;
+  font-weight: bold;
+  font-size: 56px;
+  color: #455a64;
+  margin-bottom: 100px;
+}
+
+.products .content-card {
+  padding: 35px 0px;
+  height: 290px;
+  margin-left: 60px;
+  -webkit-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.25);
+}
+
+.products .content-card .list-heading {
+  padding-left: 15px;
+  font-weight: bold;
+  text-align: left !important;
+  font-size: 22px;
+  color: #455a64;
+}
+
+.products .content-card ul {
+  padding-left: 35px;
+  margin-top: 20px;
+  font-size: 18px;
+}
+
+.products .content-card ul li {
+  text-align: left;
+  color: #455a64;
+  list-style: none;
+  line-height: 30px;
+}
+
+.products .content-card ul li:before {
+  font-family: 'FontAwesome';
+  content: "\f058";
+  margin: 0 5px 0 -15px;
+  color: #f44336;
+}
+
+.products .content-card .verified-user {
+  display: block;
+  margin: 0 auto;
+}
+
+.products .content-card p {
+  padding-top: 10px;
+  color: #455a64;
+  line-height: 30px;
+  text-align: center;
+  font-size: 22px;
+}
+
+.products .products-list {
+  padding-top: 80px;
+  text-align: center;
+}
+
+.products .products-list img {
+  display: block;
+  margin: 0 auto;
+  padding-left: 80px;
+}
+
+.products .products-list .product-info {
+  margin-top: 50px;
+  color: #455a64;
+}
+
+.products .products-list .product-info .effit {
+  font-size: 14px;
+  margin-bottom: 0px;
+  text-transform: uppercase;
+}
+
+.products .products-list .product-info .heading {
+  font-size: 22px;
+  font-weight: bold;
+  color: #455a64;
+  margin-bottom: 10px;
+}
+
+.products .products-list .product-info .price-text {
+  color: #455a64;
+  font-size: 14px;
+  margin-bottom: 0;
+}
+
+.products .products-list .product-info .product-price {
+  font-weight: bold;
+  font-size: 22px;
+  margin-bottom: 50px;
+}
+
+.products .products-list .product-info .with-dph {
+  font-size: 14px;
+}
+
+.products .products-list .product-info button {
+  height: 65px;
+  width: 250px;
+  margin-bottom: 140px;
+  font-weight: bold;
+}
+
+.advantages {
+  background: url(../assets/img/fungovani_foto.png);
+  background-size: cover;
+}
+
+.advantages .heading {
+  padding-top: 140px;
+  color: #fff;
+  font-weight: bold;
+}
+
+.advantages .advantages-list {
+  padding-top: 50px;
+  padding-bottom: 200px;
+  font-size: 22px;
+  color: #f1f0f0;
+  list-style: none;
+  padding-left: 0px;
+  line-height: 35px;
+}
+
+.advantages .advantages-list .highlight {
+  color: #fff;
+  font-weight: bold;
+}
+
+.advantages .advantages-list li {
+  display: -webkit-box;
+}
+
+.advantages .advantages-list li:before {
+  counter-increment: section;
+  content: counter(section);
+  margin-right: 15px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100%;
+  text-align: center;
+  font-size: 14px;
+  margin-top: 7px;
+  padding: 10px;
+  display: flex;
+  height: 20px;
+  width: 20px;
+  color: white;
+  background-color: #f44336;
+}
+
+.spectrum h1 {
+  text-align: center;
+  padding-top: 140px;
+  color: #455a64;
+}
+
+.spectrum .row {
+  padding-top: 50px;
+}
+
+.spectrum .row .circles {
+  padding-top: 90px;
+}
+
+.spectrum .row .circles .main-circle {
+  position: relative;
+  display: block;
+  margin: 0 auto;
+  padding-top: 35px;
+  border-radius: 50%;
+  text-align: center;
+  word-break: break-all;
+  height: 215px;
+  width: 215px;
+  color: #fff;
+  background: #009688;
+}
+
+.spectrum .row .circles .main-circle .heading {
+  line-height: 80px;
+  color: #fff;
+}
+
+.spectrum .row .circles .circle {
+  justify-content: center;
+  align-items: center;
+  border-radius: 100%;
+  text-align: center;
+  font-size: 15px;
+  padding: 15px;
+  display: flex;
+  height: 75px;
+  width: 75px;
+  color: rgba(0, 150, 136, 0.5);
+  border: 1px solid rgba(0, 150, 136, 0.5);
+}
+
+.spectrum .row .circles .circle:hover {
+  color: #009688;
+  border: 1px solid #009688;
+}
+
+.spectrum .row .circles .active {
+  color: #009688;
+  border: 1px solid #009688;
+}
+
+.spectrum .row .circles .c1 {
+  position: absolute;
+  top: 10px;
+  left: 250px;
+}
+
+.spectrum .row .circles .c1:before {
+  font-family: "Material Icons";
+  content: "store_mall_directory";
+  font-size: 36px;
+}
+
+.spectrum .row .circles .c2 {
+  position: absolute;
+  top: 120px;
+  left: 100px;
+}
+
+.spectrum .row .circles .c2:before {
+  font-family: "Material Icons";
+  content: "place";
+  font-size: 36px;
+}
+
+.spectrum .row .circles .c3 {
+  position: absolute;
+  top: 275px;
+  left: 140px;
+}
+
+.spectrum .row .circles .c3:before {
+  font-family: "Material Icons";
+  content: "school";
+  font-size: 36px;
+}
+
+.spectrum .row .circles .c4 {
+  position: absolute;
+  top: 120px;
+  left: 395px;
+}
+
+.spectrum .row .circles .c4:before {
+  font-family: "Material Icons";
+  content: "local_library";
+  font-size: 36px;
+}
+
+.spectrum .row .circles .c5 {
+  position: absolute;
+  top: 275px;
+  left: 355px;
+}
+
+.spectrum .row .circles .c5:before {
+  font-family: "Material Icons";
+  content: "local_hospital";
+  font-size: 36px;
+}
+
+.spectrum .row .heading {
+  font-size: 22px;
+  font-weight: 600;
+  font-family: "Roboto", sans-serif !important;
+  color: #455a64;
+}
+
+.spectrum .row ul {
+  padding-top: 30px;
+  padding-left: 0;
+  margin-left: 15px;
+  padding-bottom: 30px;
+  color: #455a64;
+}
+
+.spectrum .row button {
+  text-transform: uppercase;
+  margin-bottom: 140px;
+  font-weight: bold;
+}
+
+.functions h1 {
+  font-size: 40px;
+  color: #f44336;
+  text-align: center;
+}
+
+.functions .functions-content {
+  padding-top: 50px;
+}
+
+.functions .functions-content .collapse-card {
+  -webkit-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.25);
+  margin-bottom: 10px;
+}
+
+.functions .functions-content .collapse-card .heading {
+  color: #455a64;
+  margin-bottom: 0;
+  font-size: 18px;
+}
+
+.functions .functions-content .collapse-card .circle-check {
+  margin-top: 25px;
+}
+
+.functions .functions-content .collapse-card .circle-check:before {
+  color: #f44336;
+}
+
+.functions .functions-content .collapse-card .collapse-button {
+  color: #f44336;
+  margin-top: 20px;
+  font-size: 36px;
+}
+
+.functions .functions-content .collapse-card .collapse-card-text {
+  color: #455a64;
+  padding-left: 50px;
+  padding-top: 5px;
+}
+
+.functions .functions-content .collapse-card .collapse-card-text .subheading {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.functions .functions-content .collapse-card .col-md-5 .preparing {
+  color: #f44336;
+  font-size: 18px;
+  margin-top: 15px;
+}
+
+.functions .functions-content .collapse-card .images {
+  padding-left: 20px;
+}
+
+.functions .functions-content .collapse-card .images img {
+  height: 100px;
+  width: 200px;
+  margin-right: 20px;
+  -webkit-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.25);
+}
+
+.functions .functions-content .collapse-card .card-body ul {
+  color: #455a64;
+}
+
+.functions .mdl-button--red {
+  width: 300px;
+  height: 55px;
+  display: block;
+  margin: 0 auto;
+  font-size: 22px;
+  margin-top: 50px;
+  font-weight: bold;
+  margin-bottom: 140px;
+}
+
+.support {
+  background: url(../assets/img/paralax_red.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  padding-bottom: 140px;
+}
+
+.support h1 {
+  padding-top: 140px;
+  text-align: center;
+  color: #fff;
+}
+
+.support p {
+  padding-top: 50px;
+  text-align: center;
+  font-size: 18px;
+  color: #fff;
+  padding-bottom: 50px;
+}
+
+.support .contact-button {
+  color: #fff;
+  background-color: transparent;
+  border: 1px solid #fff;
+  padding-left: 56px;
+  padding-right: 56px;
+  height: 40px;
+  font-weight: bold;
+  display: block;
+  margin: 0 auto;
+}
+
+footer {
+  background-color: #eeeeee;
+  padding-top: 80px;
+}
+
+footer .usefull {
+  text-align: right;
+}
+
+footer .usefull .heading {
+  font-size: 14px;
+  color: #455a64;
+}
+
+footer .usefull ul {
+  list-style: none;
+  padding: 0;
+}
+
+footer .usefull a {
+  color: #455a64;
+  padding-right: 0px;
+}
+
+footer hr {
+  margin-top: 80px;
+}
+
+footer .copy {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  color: #455a64;
+  text-align: center;
+}
+
+.bonus-services {
+  margin-top: 140px;
+}
+
+.bonus-services h1 {
+  margin-top: 0px;
+  color: #455a64;
+}
+
+.bonus-services .heading {
+  padding-top: 50px;
+  color: #455a64;
+  font-size: 18px;
+}
+
+.bonus-services .bonus-services-list {
+  color: #455a64;
+  padding-left: 15px;
+  padding-bottom: 50px;
+}
+
+.bonus-services .contact-us-button {
+  font-size: 14px;
+  color: #455a64;
+  height: 45px;
+  width: 237px;
+  font-weight: bold;
+  margin-bottom: 50px;
+}
+
+.bonus-services img {
+  margin-top: 132px;
+}
+
 .button-close-modal {
   color: #455a64 !important;
   top: 30px;
@@ -601,4 +1254,4 @@
     margin-top: 168px;
   }
 }
-/*# sourceMappingURL=modal.css.map */
+/*# sourceMappingURL=main.css.map */
