--- a/css/main.css
+++ b/css/main.css
@@ -939,7 +939,7 @@ footer .copy {
 
 .buy-product-modal .container .payment-block {
   margin-top: 20px;
-  background-color: #ebeaea;
+  background-color: #eeeeee;
   padding: 25px;
   color: #455a64;
 }
