--- a/scss/modal/_modal.scss
+++ b/scss/modal/_modal.scss
@@ -263,7 +263,7 @@
 
         .payment-block {
             margin-top: 20px;
-            background-color: #ebeaea;
+            background-color: #eeeeee;
             padding: 25px; 
             color: $text-field;
 
