--- a/css/modal.css
+++ b/css/modal.css
@@ -286,7 +286,7 @@
 
 .buy-product-modal .container .payment-block {
   margin-top: 20px;
-  background-color: #ebeaea;
+  background-color: #eeeeee;
   padding: 25px;
   color: #455a64;
 }
