--- a/scss/_sm_xs_devices.scss
+++ b/scss/_sm_xs_devices.scss
@@ -23,7 +23,7 @@
     }
 
     .hero {
-        height: 625px;
+        height: 700px;
         padding-top: 50px;
     }
 
@@ -47,7 +47,7 @@
     }
 
     .hero .button-scroll {
-        top: 590px;
+        top: 670px;
     }
 
     .products {
@@ -160,7 +160,7 @@
     }
 
     .collapse-card-text {
-        padding-left: 30px;
+        padding-left: 20px !important;
     }
 
     .content-card {
