--- a/css/gdpr.css
+++ b/css/gdpr.css
@@ -225,7 +225,7 @@ footer .copy {
     height: unset;
   }
   .hero {
-    height: 625px;
+    height: 700px;
     padding-top: 50px;
   }
   .hero h1 {
@@ -244,7 +244,7 @@ footer .copy {
     display: none;
   }
   .hero .button-scroll {
-    top: 590px;
+    top: 670px;
   }
   .products {
     padding: 40px 0;
@@ -332,7 +332,7 @@ footer .copy {
     margin-bottom: 35px;
   }
   .collapse-card-text {
-    padding-left: 30px;
+    padding-left: 20px !important;
   }
   .content-card {
     padding: 0;
