--- a/css/gdpr.css
+++ b/css/gdpr.css
@@ -484,4 +484,10 @@ footer .copy {
     margin-top: 168px;
   }
 }
+
+@media (min-width: 993px) {
+  .collapse-card-text .preparing {
+    display: none;
+  }
+}
 /*# sourceMappingURL=gdpr.css.map */
