--- a/css/main.css
+++ b/css/main.css
@@ -1262,4 +1262,10 @@ footer .copy {
     margin-top: 168px;
   }
 }
+
+@media (min-width: 993px) {
+  .collapse-card-text .preparing {
+    display: none;
+  }
+}
 /*# sourceMappingURL=main.css.map */
