--- a/css/modal.css
+++ b/css/modal.css
@@ -605,4 +605,10 @@ button {
     margin-top: 168px;
   }
 }
+
+@media (min-width: 993px) {
+  .collapse-card-text .preparing {
+    display: none;
+  }
+}
 /*# sourceMappingURL=modal.css.map */
