--- a/scss/_md_devices.scss
+++ b/scss/_md_devices.scss
@@ -115,3 +115,11 @@
         margin-top: 168px;
     }
 }
+
+@media (min-width: 993px) {
+    .collapse-card-text {
+        .preparing {
+            display: none;
+        }
+    }
+}
