--- a/scss/modal/_modal.scss
+++ b/scss/modal/_modal.scss
@@ -83,6 +83,11 @@
 
                 label {
                     margin-left: 10px;
+
+                    a {
+                        color: #455a64;
+                        text-decoration: underline;
+                    }
                 }
             }
 
