--- a/css/main.css
+++ b/css/main.css
@@ -776,6 +776,11 @@ footer .copy {
   margin-left: 10px;
 }
 
+.contactus-modal .container form .conditions label a {
+  color: #455a64;
+  text-decoration: underline;
+}
+
 .contactus-modal .container form button {
   margin-top: 65px;
   width: 100%;
