repaired contact form

--- a/css/main.css
+++ b/css/main.css
@@ -815,6 +815,10 @@ footer .copy {
   list-style: none;
 }
 
+.contactus-modal .modal-footer .row li a {
+  color: #455a64;
+}
+
 .contactus-modal .modal-footer .row li .fa {
   margin-right: 15px;
 }
