--- a/scss/modal.css
+++ b/scss/modal.css
@@ -78,7 +78,7 @@ button {
   font-size: 14px;
 }
 
-.contactus-modal .container form input[type="text"], .contactus-modal .container form input[type="email"], .contactus-modal .container form input[type="tel"] {
+.contactus-modal .container form input[type="text"], .contactus-modal .container form input[type="tel"], .contactus-modal .container form input[type="email"] {
   margin-bottom: 30px;
   width: 100%;
   -webkit-box-sizing: border-box;
@@ -99,7 +99,7 @@ button {
   background-image: none;
 }
 
-.contactus-modal .container form input[type="text"]:focus {
+.contactus-modal .container form input[type="text"]:focus, .contactus-modal .container form input[type="email"]:focus, .contactus-modal .container form input[type="tel"]:focus {
   color: #009688;
   border-color: #009688;
   border-width: 2px;
