--- a/scss/modal/_modal.scss
+++ b/scss/modal/_modal.scss
@@ -44,7 +44,7 @@
                 font-size: 14px;
             }
 
-            input[type="text"], input[type="email"], input[type="tel"] {
+            input[type="text"], input[type="tel"], input[type="email"] {
                 margin-bottom: 30px;
                 width: 100%;
                 -webkit-box-sizing: border-box;
@@ -66,7 +66,7 @@
             }
 
 
-            input[type="text"]:focus {
+            input[type="text"]:focus, input[type="email"]:focus, input[type="tel"]:focus {
                 color: $turquoise;
                 border-color: $turquoise;
                 border-width: 2px;
