--- a/css/modal.css
+++ b/css/modal.css
@@ -78,7 +78,7 @@ button {
   font-size: 14px;
 }
 
-.contactus-modal .container form input[type="text"] {
+.contactus-modal .container form input[type="text"], .contactus-modal .container form input[type="email"] {
   margin-bottom: 30px;
   width: 100%;
   -webkit-box-sizing: border-box;
@@ -333,6 +333,10 @@ button {
 
 .buy-product-modal .container p {
   color: #455a64;
+}
+
+.modal {
+  overflow-y: scroll;
 }
 
 @media (max-width: 768px) {
