--- a/scss/modal/_modal.scss
+++ b/scss/modal/_modal.scss
@@ -45,28 +45,28 @@
             }
 
             input[type="text"], input[type="email"], input[type="tel"] {
-                margin-bottom: 30px !important;
-                width: 100% !important;
-                -webkit-box-sizing: border-box !important;
-                box-sizing: border-box !important;
-                display: block !important;
-                background-color: transparent !important;
-                color: rgba(0,0,0,.87) !important;
-                border: none !important;
-                border-bottom: 1px solid rgba(0,0,0,.26) !important;
-                outline: 0 !important;
-                padding: 0 !important;
-                -webkit-box-shadow: none !important;
-                box-shadow: none !important;
-                border-radius: 0 !important;
-                font-size: 16px !important;
-                font-family: inherit !important;
-                line-height: inherit !important;
-                background-image: none !important;
+                margin-bottom: 30px ;
+                width: 100%;
+                -webkit-box-sizing: border-box ;
+                box-sizing: border-box ;
+                display: block ;
+                background-color: transparent ;
+                color: rgba(0,0,0,.87) ;
+                border: none ;
+                border-bottom: 1px solid rgba(0,0,0,.26) ;
+                outline: 0 ;
+                padding: 0 ;
+                -webkit-box-shadow: none ;
+                box-shadow: none ;
+                border-radius: 0 ;
+                font-size: 16px ;
+                font-family: inherit ;
+                line-height: inherit ;
+                background-image: none ;
             }
 
 
-            input[type="text"]:focus {
+            input[type="text"]:focus, input[type="email"]:focus, input[type="tel"]:focus {
                 color: $turquoise;
                 border-color: $turquoise;
                 border-width: 2px;
