--- a/scss/site/_body.scss
+++ b/scss/site/_body.scss
@@ -27,3 +27,6 @@ h1, .heading, .list-heading, .effit, .price-text, .with-dph {
 .red {
     color: $red;
 }
+
+.ekko-lightbox-nav-overlay a span { 
+    color: #455a64 
